all in this together
